--- a/src/main/resources/templates/layout.mustache
+++ b/src/main/resources/templates/layout.mustache
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ctx.base}}css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="{{ctx.base}}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ctx.base}}css/dropzone.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="{{ctx.base}}images/logo.png">
     <title>
       {{$title}}{{/title}}
