some files refactoring + base context fully parameterized

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -39,7 +39,7 @@
       </div>
       <!-- ------------------------------------------------------------------------------------------- -->
       <div id="fileupload" class="tab-pane fade">
-        <script src="{{ctx.base}}js/dropzone.js"></script>
+        <script src="{{ctx.base}}js/libs/dropzone.js"></script>
         <script>
           Dropzone.options.customDropzone = {
             paramName: "thefile", // The name that will be used to transfer the file
