--- a/src/main/resources/templates/layout.mustache
+++ b/src/main/resources/templates/layout.mustache
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <script src="{{ctx.base}}js/jquery.min.js"></script>
-    <script src="{{ctx.base}}js/bootstrap.min.js"></script>
+    <script src="{{ctx.base}}js/libs/jquery.min.js"></script>
+    <script src="{{ctx.base}}js/libs/bootstrap.min.js"></script>
   </body>
 </html>
