--- a/src/main/resources/templates/layout.mustache
+++ b/src/main/resources/templates/layout.mustache
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ctx.base}}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ctx.base}}css/dropzone.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="{{ctx.base}}images/logo.png">
+    <link href="{{ctx.base}}/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ctx.base}}/css/dropzone.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{{ctx.base}}/images/logo.png">
     <title>
       {{$title}}{{/title}}
     </title>
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <script src="{{ctx.base}}js/libs/jquery.min.js"></script>
-    <script src="{{ctx.base}}js/libs/bootstrap.min.js"></script>
+    <script src="{{ctx.base}}/js/libs/jquery.min.js"></script>
+    <script src="{{ctx.base}}/js/libs/bootstrap.min.js"></script>
   </body>
 </html>
