file uploads finished (with file written) managing both ondisk and inmemory scheme + using scala better-files api

--- a/src/main/resources/templates/elkpart.mustache
+++ b/src/main/resources/templates/elkpart.mustache
@@ -10,7 +10,7 @@
 			    
           $.ajax(
                   {
-                    url: '{{ctx.base}}/message',
+                    url: '{{ctx.base}}/api/message',
                     cache: false,
                     type: 'POST',
                     data: 'message='+newmsg
